--- a/admin/add-product.html
+++ b/admin/add-product.html
@@ -39,7 +39,7 @@
         </div>
 
         <!-- Main Content -->
-        <div class="p-8 flex flex-col items-center w-full">
+        <div class="px-5 py-8 md:p-8 flex flex-col items-center w-full">
             <h1 class="text-3xl font-semibold mb-6">Add New Product</h1>
 
             <!-- Product Form -->
