--- a/admin/admin-panel.html
+++ b/admin/admin-panel.html
@@ -12,7 +12,7 @@
             display: none;
         }
 
-        table tbody tr:nth-child(odd){
+        table tbody tr:nth-child(even){
             background-color:  #f3f4f6;
         }
     </style>
@@ -72,8 +72,11 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                <tr>
+                                    <td class="px-4 py-2"></td>
+                                </tr>
                                 <!-- Sample Product Row -->
-                                <tr class="bg-gray-100">
+                                <tr>
                                     <td class="px-4 py-2 text-nowrap">1</td>
                                     <td class="px-4 py-2 text-nowrap">Perfume A</td>
                                     <td class="px-4 py-2 text-nowrap">$49.99</td>
