--- a/admin/admin-panel.html
+++ b/admin/admin-panel.html
@@ -27,8 +27,8 @@
             <div class="">
                 <h1 class="text-2xl font-bold">Admin Panel</h1>
             </div>
-            <ul class="space-y-2 mt-10 hidden lg:block">
-                <li class="hover:bg-gray-700 rounded-md"><a href="admin-panel.html"
+            <ul class="space-y-2 mt-10 hidden lg:block bg-gray-700 rounded-md w-full">
+                <li><a href="admin-panel.html"
                         class="text-lg px-3 py-2 inline-block">Dashboard</a></li>
                 <!-- <li class="hover:bg-gray-700 rounded-md"><a href="admin_products.html" class="text-lg px-3 py-2 inline-block ">Manage Products</a>
                 </li>
