--- a/product.html
+++ b/product.html
@@ -83,13 +83,6 @@
                 <!-- Product Title -->
                 <h1 class="text-3xl font-bold text-gray-900">Luxury Perfume - Essence of Elegance</h1>
 
-                <!-- Product Description -->
-                <p class="text-gray-600 text-lg mt-5">
-                    Discover the essence of luxury with our premium perfume. A harmonious blend of floral, woody, and
-                    citrus notes
-                    designed to captivate your senses.
-                </p>
-
                 <div class="flex gap-10 items-center mt-3">
                     <span class="text-lg text-gray-900 inline-block"><i class="ri-star-s-fill text-2xl me-1 text-yellow-300"></i>4.7</span>
                     <span class="text-md text-green-500 inline-block">In Stock</span>
@@ -103,11 +96,11 @@
                 <span class="font-semibold text-gray-900 mt-2 inline-block">Inclusive of all taxes</span>
 
                 <!-- Additional Info -->
-                <div class="space-y-2 mt-5">
+                <!-- <div class="space-y-2 mt-5">
                     <p><strong>Volume:</strong> 100ml</p>
                     <p><strong>Type:</strong> Eau de Parfum</p>
                     <p><strong>Gender:</strong> Unisex</p>
-                </div>
+                </div> -->
 
                 <!-- Add to Cart Button -->
                 <a href="cart.html" class="mt-5 inline-block w-full">
@@ -116,6 +109,13 @@
                         Add to Cart
                     </button>
                 </a>
+
+                <!-- Product Description -->
+                <p class="text-gray-600 text-lg mt-5">
+                    Discover the essence of luxury with our premium perfume. A harmonious blend of floral, woody, and
+                    citrus notes
+                    designed to captivate your senses.
+                </p>
             </div>
         </div>
     </div>
