--- a/profile.html
+++ b/profile.html
@@ -83,13 +83,13 @@
     <section class="px-5 md:px-20 lg:px-5 xl:px-20 py-10">
         <div class="max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-4 gap-6">
             <!-- Sidebar -->
-            <div class="sidebar bg-white shadow-lg rounded-lg p-6 sticky top-[108px] hidden lg:block">
-                <h2 class="text-lg font-bold mb-4">Dashboard</h2>
-                <nav class="space-y-4 bg-gray-50 rounded-md shadow-sm p-3">
-                    <a href="#personal-info" class="block text-gray-700 hover:text-gray-900">Personal Information</a>
-                    <a href="#order-history" class="block text-gray-700 hover:text-gray-900">Order History</a>
-                    <a href="#address-list" class="block text-gray-700 hover:text-gray-900">Address List</a>
-                    <a href="#change-password" class="block text-gray-700 hover:text-gray-900">Change Password</a>
+            <div class="sidebar bg-gray-900 shadow-lg rounded-lg p-6 sticky top-[108px] hidden lg:block">
+                <h2 class="text-lg font-bold mb-4 text-white">Dashboard</h2>
+                <nav class="space-y-4 bg-gray-700 rounded-md shadow-sm p-3">
+                    <a href="#personal-info" class="block text-white">Personal Information</a>
+                    <a href="#order-history" class="block text-white">Order History</a>
+                    <a href="#address-list" class="block text-white">Address List</a>
+                    <a href="#change-password" class="block text-white">Change Password</a>
                 </nav>
             </div>
 
